@@ -1,7 +1,7 @@
 /* PR middle-end/18548 */
 /* Test case reduced by Andrew Pinski <pinskia@physics.uc.edu> */
 /* { dg-do run } */
-/* { dg-options "-O1 -fno-tree-lrs" } */
+/* { dg-options "-O1 " } */
 /* m32c has varying sized pointers */
 /* { dg-skip-if "" { "m32c-*-*" } { "*" } { "-mcpu=m32c" "-mcpu=m32cm" } } */
 
